--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,5 @@ deploy:
     - ls
     - pwd
     - cd /usr/src/wp-importer
+    - npm config set strict-ssl=false
     - node app.js --api-version=2.19
