--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,9 @@ deploy:
     - cd /usr/src/wp-importer
     - npm config set strict-ssl=false
     - node app.js --api-version=2.19
+    - cd json/
+    - ls
+    - cd /builds/istdebaan/master-studie/
+    - ls
+    - cd json/
+    - ls
